test/errors/type/math/clamp4.yasl
math.clamp(.s, .s, .s)
