test/errors/type/math/clamp4.yasl.err
TypeError: math.clamp expected arg in position 2 to be of type float, got arg of type str. (line 1)
